# turnkeeper

./: README.md  docker-compose.yml
backend/: .env  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  eslint.config.js  package-lock.json  package.json  tsconfig.json
backend/backend-derive/: Cargo.toml
backend/backend-derive/src/: lib.rs
backend/docs/: ActiveGameArchitecture.puml  DATABASE.md  Database.puml  Domain.mmd  GameHttpArchitecture.puml  UserAuthFlow.puml
backend/migrations/: 001_user.sql  002_game.sql  003_game_instance.sql  003_game_log.sql  003_player.sql  004_stat.sql
backend/src/: DESIGN.md  index.ts  lib.rs  main.rs
backend/src/application/: mod.rs
backend/src/auth/: gmAuth.ts  jwt.rs  playerAuth.ts  userAuth.ts
backend/src/config/: config.ts
backend/src/connectionControllers/: GmController.ts  UserController.ts
backend/src/connectionHandlers/: gmPlayersHandler.ts  playerPlayersHandler.ts
backend/src/controllers/: gmController.ts
backend/src/database/: SqliteDatabase.ts
backend/src/db/: mod.rs
backend/src/domain/: DESIGN.md  error.rs  mod.rs
backend/src/entities/: GameState.ts  Message.ts  Player.ts  Tradable.ts
backend/src/entity/: mod.rs
backend/src/error/: mod.rs
backend/src/handler/: game.rs  gm.rs  mod.rs  user.rs
backend/src/infrastructure/: app_state.rs  error.rs  mod.rs
backend/src/macros/: db.rs  handler.rs  mod.rs
backend/src/migrations/: 001_user.sql
backend/src/repositories/: gameStateRepository.ts  messageRepository.ts  playerRepository.ts  repositoryErrors.ts  statsRepository.ts  tradableRepository.ts
backend/src/repository/: user.rs
backend/src/services/: gameStateHandler.ts  gameloop.ts  logger.ts  messagesHandler.ts  playerConnectionService.ts  playerService.ts  playerStatsHandler.ts  playersHandler.ts  statsHandler.ts  statsService.ts
backend/src/sockets/: gmSocket.ts  playerSocket.ts  userSocket.ts
backend/tests/: gm_auth_and_ws.rs  gm_auth_functional_test.rs  gm_websocket_functional_test.rs  mod.rs  user_auth_and_ws.rs  user_auth_functional_test.rs  user_websocket_functional_test.rs
(+845 files in other folders)
