[package]
name = "turnkeeper_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async Runtime
tokio = {  version = "1.49.0", features = ["full"] }

# Http / Websocket
axum = { version = "0.8.8", features = ["ws"] }

# DB
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "sqlite", "macros", "derive", "chrono", "uuid" ] }

# Json
serde_json = "1.0.148"