[package]
name = "turnkeeper_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Macros
backend-derive = { path = "./backend-derive" }

# Async Runtime
tokio = {  version = "1.49.0", features = ["full"] }

# Http / Websocket
axum = { version = "0.8.8", features = ["ws"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors"] }

# Uuid
uuid = { version = "1.19.0", features = ["v4"] }

# DB
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "sqlite", "macros", "derive", "chrono", "migrate" ] }

# Json
serde = "1.0.228"
serde_json = "1.0.148"
serde_valid = "2.0.1"

# Errors
anyhow = "1.0.100"
thiserror = "2.0.17"

# Env
dotenv = "0.15.0"

# Mocking
mockall = "0.14.0"
fnmock = { git = "https://github.com/jakob-rzeppa/fnmock.git", version = "0.1.0" }
